--- a/PPAI_Java_NetBeans_Swing/pom.xml
+++ b/PPAI_Java_NetBeans_Swing/pom.xml
@@ -15,11 +15,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.46.1.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.5.2.Final</version>
@@ -36,10 +31,10 @@
             <version>1.1.1</version>
         </dependency>
 <!--         https://mvnrepository.com/artifact/mysql/mysql-connector-java 
-        <dependency>
+-->     <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.17</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 </project>
