--- a/PPAI_Java_NetBeans_Swing/pom.xml
+++ b/PPAI_Java_NetBeans_Swing/pom.xml
@@ -30,11 +30,16 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
-<!--         https://mvnrepository.com/artifact/mysql/mysql-connector-java 
--->     <dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE220</version>
         </dependency>
     </dependencies>
 </project>
